[package]
name = "sudoku"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = { version = "0.40.0" }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
bitfield = "0.13.2"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
clap = "2.33.3"
rand = "0.8.4"
rand_pcg = "0.3.1"